references/sysmlv2/SysML-v2-Pilot-Implementation/org.omg.sysml.xpect.tests/src/org/omg/sysml/xpect/tests/validation/invalid/ConnectionUsage_Invalid.sysml.xt
version https://git-lfs.github.com/spec/v1
oid sha256:15da941de9305e752e3475218f81dc4bc11d2ca8df91653752ce6e4d8b9852fa
size 1731
